--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <div class="rendered-img"></div>
   </div>
   <div class="btn-wrap">
-    <button id="screenshot" type="button">Snap current pose</button>
-  </div>
+    <div class="center">
+      <button id="screenshot" type="button">Snap current pose</button>
+      <button id="next" type="button">Next pose</button>
+    </div>
+      </div>
   <script src="./main.js" type="module"></script>
 </body>
 </html>
