--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div class="btn-wrap">
     <div class="center">
       <button id="screenshot" type="button">Snap current pose</button>
+      <button id="previous" type="button">Previous pose</button>
       <button id="next" type="button">Next pose</button>
     </div>
       </div>
