--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <div class="wrap">
     <div id="THREEjs">
       <canvas id="c"></canvas>
+      <div id="overlay" class="overlay"></div>
+      <div id="msg" class="ui-navigation"></div>
     </div>
     <div class="rendered-img"></div>
   </div>
