--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <div class="btn-wrap">
     <div class="center">
       <button id="screenshot" type="button">Snap current pose</button>
+      <button id="outline" type="button">Toggle outline</button>
       <button id="previous" type="button">Previous pose</button>
       <button id="next" type="button">Next pose</button>
     </div>
