Only outline btn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>Test</title>
+  <title>Croqee 3D</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
@@ -18,7 +18,8 @@
   <div class="btn-wrap">
     <div class="center">
       <button id="screenshot" type="button">Snap current pose</button>
-      <button id="outline" type="button">Toggle outline</button>
+      <button id="outline" type="button">Overlay outline</button>
+      <button id="toggleModel" type="button">Show outline only</button>
       <button id="previous" type="button">Previous pose</button>
       <button id="next" type="button">Next pose</button>
     </div>
