--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <div class="btn-wrap">
     <div class="center">
       <button id="screenshot" type="button">Snap current pose</button>
-      <button id="outline" type="button">Overlay outline</button>
-      <button id="toggleModel" type="button">Show outline only</button>
+      <button id="outline" type="button">Toggle outline</button>
+      <button id="toggleModel" type="button">Toggle model</button>
       <button id="previous" type="button">Previous pose</button>
       <button id="next" type="button">Next pose</button>
     </div>
